import { createClient } from '@connectrpc/connect'
import { AdminService } from '~/generated/leapmux/v1/admin_pb'
import { AgentService } from '~/generated/leapmux/v1/agent_pb'
import { AuthService } from '~/generated/leapmux/v1/auth_pb'
import { FileService } from '~/generated/leapmux/v1/file_pb'
import { GitService } from '~/generated/leapmux/v1/git_pb'
import { OrgService } from '~/generated/leapmux/v1/org_pb'
import { SectionService } from '~/generated/leapmux/v1/section_pb'
import { TerminalService } from '~/generated/leapmux/v1/terminal_pb'
import { UserService } from '~/generated/leapmux/v1/user_pb'
import { WorkerManagementService } from '~/generated/leapmux/v1/worker_pb'
import { WorkspaceService } from '~/generated/leapmux/v1/workspace_pb'
import { transport } from './transport'

export const authClient = createClient(AuthService, transport)
export const agentClient = createClient(AgentService, transport)
export const workspaceClient = createClient(WorkspaceService, transport)
export const terminalClient = createClient(TerminalService, transport)
export const fileClient = createClient(FileService, transport)
export const gitClient = createClient(GitService, transport)
export const workerClient = createClient(WorkerManagementService, transport)
export const orgClient = createClient(OrgService, transport)
export const userClient = createClient(UserService, transport)
export const sectionClient = createClient(SectionService, transport)
export const adminClient = createClient(AdminService, transport)
